
- #11457: Remove old polymorphic variant syntax.
  (Stefan Muenzel, review by Gabriel Scherer and Jacques Garrigue)

* #11565: Enable -strict-formats by default.
  (Nicolás Ojeda Bär, review by David Allsopp)

* #11694: Add short syntax for generative functor types `() -> ...`
  (Jeremy Yallop, review by Gabriel Scherer, Nicolás Ojeda Bär,
  Jacques Garrigue)

### Runtime system:

- #11750: Decouple major slice from minor GC.
  (KC Sivaramakrishnan, review by Sadiq Jaffer, Guillaume Munch-Maccagnoni and
  Damien Doligez)

- #11642: Restore Cygwin port. Add GC messages for address space reservations
  when OCAMLRUNPARAM option v includes 0x1000.
  (David Allsopp, review by Xavier Leroy, Guillaume Munch-Maccagnoni
  and Gabriel Scherer)

- #11743: Speed up weak array operations
  (KC Sivaramakrishnan, review by François Bobot and Sadiq Jaffer)

- #11691, #11706: use __asm__ instead of asm for strict ISO C conformance
  (Xavier Leroy, report by Gregg Reynolds , review by Sadiq Jaffer)

- #11764: add prototypes to old-style C function definitions and declarations
  (Antonin Décimo, review by Xavier Leroy)

- #11796: protect lazy computation of code fragment digest by a mutex.
  This makes the thread sanitizer happier, and avoids duplicating
  the hashing work.
  (Gabriel Scherer, review by Xavier Leroy, report by Olivier Nicole)

- #11137: new `Unsafe_store_tag(val, new_tag)` macro to stop using
  `Tag_val(val)` as lvalue.
  (Gabriel Scherer, review by Xavier Leroy, Guillaume Munch-Maccagnoni
   and Nicolás Ojeda Bär)

- #11880: Restore the correct sigmask in systhreads.
  (Christiano Haesbaert, review by Guillaume Munch-Maccagnoni and
   Sébastien Hinderer)

- #11881: Fix thread-unsafety of registration of operations for "custom"
   values.
  (Guillaume Munch-Maccagnoni, review by Gabriel Scherer and KC
   Sivaramakrishnan)

- #11474: Add support for user-defined events in the runtime event tracing
  system. (Lucas Pluvinage, review by Sadiq Jaffer)

### Type system: