@@ -643,20 +643,16 @@ let get_field_gen mutability ptr n dbg =
 let set_field ptr n newval init dbg =
   Cop(Cstore (Word_val, init), [field_address ptr n dbg; newval], dbg)
 
-let non_profinfo_mask =
-  if Config.profinfo
-  then (1 lsl (64 - Config.profinfo_width)) - 1
-  else 0 (* [non_profinfo_mask] is unused in this case *)
-
 let get_header ptr dbg =
   (* We cannot deem this as [Immutable] due to the presence of [Obj.truncate]
      and [Obj.set_tag]. *)
   Cop(mk_load_mut Word_int,
     [Cop(Cadda, [ptr; Cconst_int(-size_int, dbg)], dbg)], dbg)
 
-let get_header_without_profinfo ptr dbg =
-  if Config.profinfo then
-    Cop(Cand, [get_header ptr dbg; Cconst_int (non_profinfo_mask, dbg)], dbg)
+let get_header_masked ptr dbg =
+  if Config.reserved_header_bits > 0 then
+    let header_mask = (1 lsl (64 - Config.reserved_header_bits)) - 1
+    in Cop(Cand, [get_header ptr dbg; Cconst_int (header_mask, dbg)], dbg)
   else
     get_header ptr dbg
 
@@ -672,7 +668,7 @@ let get_tag ptr dbg =
         [Cop(Cadda, [ptr; Cconst_int(tag_offset, dbg)], dbg)], dbg)
 
 let get_size ptr dbg =
-  Cop(Clsr, [get_header_without_profinfo ptr dbg; Cconst_int (10, dbg)], dbg)
+  Cop(Clsr, [get_header_masked ptr dbg; Cconst_int (10, dbg)], dbg)
 
 (* Array indexing *)
 
@@ -2067,7 +2063,7 @@ let offsetref n arg dbg =
              dbg)))
 
 let arraylength kind arg dbg =
-  let hdr = get_header_without_profinfo arg dbg in
+  let hdr = get_header_masked arg dbg in
   match (kind : Lambda.array_kind) with
     Pgenarray ->
       let len =
@@ -2272,7 +2268,7 @@ let arrayref_safe kind arg1 arg2 dbg =
   | Pgenarray ->
       bind "index" arg2 (fun idx ->
       bind "arr" arg1 (fun arr ->
-      bind "header" (get_header_without_profinfo arr dbg) (fun hdr ->
+      bind "header" (get_header_masked arr dbg) (fun hdr ->
         if wordsize_shift = numfloat_shift then
           Csequence(
             make_checkbound dbg [addr_array_length_shifted hdr dbg; idx],
@@ -2299,7 +2295,7 @@ let arrayref_safe kind arg1 arg2 dbg =
             Csequence(
               make_checkbound dbg [
                 addr_array_length_shifted
-                  (get_header_without_profinfo arr dbg) dbg; idx],
+                  (get_header_masked arr dbg) dbg; idx],
               addr_array_ref arr idx dbg)))
       | Pintarray ->
           bind "index" arg2 (fun idx ->
@@ -2307,7 +2303,7 @@ let arrayref_safe kind arg1 arg2 dbg =
             Csequence(
               make_checkbound dbg [
                 addr_array_length_shifted
-                  (get_header_without_profinfo arr dbg) dbg; idx],
+                  (get_header_masked arr dbg) dbg; idx],
               int_array_ref arr idx dbg)))
       | Pfloatarray ->
           box_float dbg (
@@ -2316,7 +2312,7 @@ let arrayref_safe kind arg1 arg2 dbg =
               Csequence(
                 make_checkbound dbg [
                   float_array_length_shifted
-                    (get_header_without_profinfo arr dbg) dbg;
+                    (get_header_masked arr dbg) dbg;
                   idx],
                 unboxed_float_array_ref arr idx dbg))))
 
@@ -2375,7 +2371,7 @@ let arrayset_safe kind arg1 arg2 arg3 dbg =
       bind "newval" arg3 (fun newval ->
       bind "index" arg2 (fun idx ->
       bind "arr" arg1 (fun arr ->
-      bind "header" (get_header_without_profinfo arr dbg) (fun hdr ->
+      bind "header" (get_header_masked arr dbg) (fun hdr ->
         if wordsize_shift = numfloat_shift then
           Csequence(
             make_checkbound dbg [addr_array_length_shifted hdr dbg; idx],
@@ -2407,7 +2403,7 @@ let arrayset_safe kind arg1 arg2 arg3 dbg =
         Csequence(
           make_checkbound dbg [
             addr_array_length_shifted
-              (get_header_without_profinfo arr dbg) dbg;
+              (get_header_masked arr dbg) dbg;
             idx],
           addr_array_set arr idx newval dbg))))
   | Pintarray ->
@@ -2417,7 +2413,7 @@ let arrayset_safe kind arg1 arg2 arg3 dbg =
         Csequence(
           make_checkbound dbg [
             addr_array_length_shifted
-              (get_header_without_profinfo arr dbg) dbg;
+              (get_header_masked arr dbg) dbg;
             idx],
           int_array_set arr idx newval dbg))))
   | Pfloatarray ->
@@ -2427,7 +2423,7 @@ let arrayset_safe kind arg1 arg2 arg3 dbg =
         Csequence(
           make_checkbound dbg [
             float_array_length_shifted
-              (get_header_without_profinfo arr dbg) dbg;
+              (get_header_masked arr dbg) dbg;
             idx],
           float_array_set arr idx newval dbg))))
   )
