@@ -61,8 +61,7 @@ CSCFLAGS=""
 ostype="Unix"
 SO="so"
 toolchain="cc"
-profinfo=false
-profinfo_width=0
+reserved_header_bits=0
 instrumented_runtime=false
 instrumented_runtime_libs=""
 bootstrapping_flexdll=false
@@ -194,8 +193,7 @@ AC_SUBST([mksharedlibrpath])
 AC_SUBST([install_bytecode_programs])
 AC_SUBST([install_source_artifacts])
 AC_SUBST([install_ocamlnat])
-AC_SUBST([profinfo])
-AC_SUBST([profinfo_width])
+AC_SUBST([reserved_header_bits])
 AC_SUBST([frame_pointers])
 AC_SUBST([flambda])
 AC_SUBST([flambda_invariants])
@@ -435,15 +433,11 @@ AC_ARG_WITH([target-bindir],
 
 AC_ARG_ENABLE([reserved-header-bits],
   [AS_HELP_STRING([--enable-reserved-header-bits=BITS],
-  [reserve BITS (between 0 and 31) bits in block headers for profiling info])],
+    [reserve BITS (between 0 and 31) bits in block headers])],
   [AS_CASE([$enable_reserved_header_bits],
-    [0],
-      [with_profinfo=false
-      profinfo_width=0],
-    [[[1-9]]|[[1-2]][[0-9]]|3[[0-1]]],
-      [with_profinfo=true
-      profinfo_width="$enable_reserved_header_bits"],
-    [AC_MSG_ERROR([invalid argument to --enable-reserved-header-bits])])])
+    [[[0-9]]|[[1-2]][[0-9]]|3[[0-1]]],
+      [ reserved_header_bits=$enable_reserved_header_bits],
+  [AC_MSG_ERROR([invalid argument to --enable-reserved-header-bits])])])
 
 AC_ARG_ENABLE([stdlib-manpages],
   [AS_HELP_STRING([--disable-stdlib-manpages],
@@ -2063,8 +2057,7 @@ AS_IF([test x"$enable_naked_pointers_checker" = "xyes" ],
 ## Check for mmap support for huge pages and contiguous heap
 OCAML_MMAP_SUPPORTS_HUGE_PAGES
 
-AC_DEFINE_UNQUOTED([PROFINFO_WIDTH], [$profinfo_width])
-AS_IF([$profinfo], [AC_DEFINE([WITH_PROFINFO])])
+AC_DEFINE_UNQUOTED([HEADER_RESERVED_BITS], [$reserved_header_bits])
 
 AS_IF([test x"$enable_installing_bytecode_programs" = "xno"],
   [install_bytecode_programs=false],
