@@ -58,8 +58,7 @@ let system = "unknown"
 let asm = boot_cannot_call "the assembler"
 let asm_cfi_supported = false
 let with_frame_pointers = false
-let profinfo = false
-let profinfo_width = 0
+let reserved_header_bits = 0
 let ext_exe = ".ex_The boot compiler should not be using Config.ext_exe"
 let ext_obj = ".o_The boot compiler cannot process C objects"
 let ext_asm = ".s_The boot compiler should not be using Config.ext_asm"
